@@ -52,6 +52,7 @@ LIST(APPEND WebCore_SOURCES
     platform/win/PopupMenuWin.cpp
     platform/win/PlatformMouseEventWin.cpp
     platform/win/PlatformScreenWin.cpp
+    platform/win/SSLKeyGeneratorWin.cpp
     platform/win/ScrollbarThemeWin.cpp
     platform/win/SearchPopupMenuWin.cpp
     platform/win/SharedBufferWin.cpp
@@ -66,7 +67,6 @@ LIST(APPEND WebCore_SOURCES
     platform/wince/DragDataWince.cpp
     platform/wince/DragImageWince.cpp
     platform/wince/FileSystemWince.cpp
-    platform/wince/KeygenWince.cpp
     platform/wince/KURLWince.cpp
     platform/wince/MIMETypeRegistryWince.cpp
     platform/wince/SharedTimerWince.cpp
